added link for MS Azure integration

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -52,6 +52,8 @@ The Microsoft Azure Integration will deliver the following capabilities to Red H
 * Relationships
 * Utilization 
 
+For more information on Microsoft Azure Integration in CloudForms, see, +Microsoft Azure Provider - Tech Preview+ section in https://access.redhat.com/articles/2037663[Red Hat CloudForms 4.0 Beta Features].
+
 *Multi Tenancy*
 
 Multitenancy in Red Hat CloudForms offers several enhancements, with an ability to:
