--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -2,7 +2,7 @@
 
 = Adding Azure Providers
 
-CloudForms Management Engine now supports Microsoft Azure providers. When adding an Azure provider, select a region from a list of possible regions. One provider will be created for the selected region.
+CloudForms Management Engine now supports Microsoft Azure providers. When adding an Azure provider, select a region from a list of possible regions; one provider will be created for the selected region.
 You can discover a set of Azure providers across all regions.
 
 NOTE: Before Red Hat CloudForms can be authenticated to Microsoft Azure, a series of steps must be followed on Azure to create a service principal account for CloudForms; see https://azure.microsoft.com/en-us/documentation/articles/resource-group-create-service-principal-portal/[Create Active Directory application and service principal account using the Azure portal].
