added note to Deprecated Technologies about IE9, which will be deprecated in CFME 4.1.

--- a/doc-Release_Notes/deprecated_technology.adoc
+++ b/doc-Release_Notes/deprecated_technology.adoc
@@ -19,3 +19,7 @@ With this release, the option to filter conditions for both Control
 and reporting based on Ruby scripts has been removed from the list
 of options.
 
+*Internet Explorer 9 Support*
+
+Red Hat CloudForms 4.0 is the last release to support Windows Internet
+Explorer 9, which will be deprecated in Red Hat CloudForms 4.1.
