--- a/doc-Appliance_Hardening_Guide/Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/Keys.adoc
@@ -2,7 +2,7 @@
 = Creating Custom Encryption Keys
 
 To avoid storing passwords in plain text, CloudForms appliances use an encryption key to encode and decode passwords.
-Each appliance stores the key in the [path]_/var/www/miq/vmdb/certs/v2_key_. Changing the encryption key is recommended during setting up a new Appliance.
+Each appliance stores the key in the [path]_/var/www/miq/vmdb/certs/v2_key_. Changing the encryption key is recommended during setting up a new CloudForms Appliance.
 
 IMPORTANT: Red Hat does not recommend changing the encryption key for an existing Appliance as the ability to decrypt the password will be lost, which affects all stored passwords in CloudForms.
 
