added Simplified Chinese to Release Notes enhancements list; edited Changing UI Locale procedure to include Simplified Chinese; edited General Config Guide Setting Display Settings procedure to include the 3 languages

--- a/doc-General_Configuration_Guide/My_Settings.adoc
+++ b/doc-General_Configuration_Guide/My_Settings.adoc
@@ -3,7 +3,7 @@
 
 Options under +Configure → My Settings+ enable you to control user settings such as how things are displayed, default views, and individual tags. You can also set your color scheme, button options, and external RSS feeds on the main <productname>CloudForms Management Engine</productname> dashboard.
 
-=== Visual Settings 
+=== Visual Settings
 
 For all of the +Visual+ options, click +Save+ to update your configuration settings. Click +Reset+ to undo any unsaved changes that have been made on the current screen.
 
@@ -13,7 +13,7 @@ This group of settings is used to control the view of your virtual thumbnails. E
 Use the quadrant view to see a component's properties at a glance.
 
 image:7110.png[]
-				
+
 * Check +Show Infrastructure Quadrants+ to see the four icons in your provider. Uncheck to see only one icon.
 * Check +Show Cloud Provider Quadrants+ to see the four icons in your hosts. Uncheck to see only one icon.
 * Check +Show Host Quadrants+ to see the four icons in your hosts. Uncheck to see only one icon.
@@ -55,7 +55,7 @@ Use the following procedure to set your own themes, colors, and time zone for th
 . Use +Chart Theme+ to select a group of colors and font sizes specifically for charts.
 . Use +Time Zone+ to select the time zone in which to display the console.
 . Note that in time zones where clocks are set forward for daylight savings time, the time zone correctly displays as EDT (Eastern Daylight Time) in the console. When the clocks are set back, it correctly displays as EST (Eastern Standard Time).
-. Use +Locale+ to select the language in which to display the console.
+. Use +Locale+ to select the language in which to display the console. Red Hat CloudForms 4.0 supports English, Japanese (+日本語+), and Simplified Chinese (+简体中文+). The default is English.
 . Click +Save+.
 
 === Default Views
@@ -117,7 +117,7 @@ Use the following procedure to set default views for clouds.
 
 ==== Setting Default Views for Services
 
-Use the following proceduret to set default views for services.
+Use the following procedure to set default views for services.
 
 . Navigate to Configure → My Settings, then click on the Default Views tab.
 . In the Services area, click the appropriate button for the way you want to view each item.
@@ -224,4 +224,3 @@ To Delete a Time Profile:
 . Click image:1847.png[] (Configuration), and image:gui_delete.png[] (Delete Selected Time Profiles).
 . Make the required changes.
 . Click Save.
-
