--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -42,11 +42,11 @@ The Event Switchboard delivers the following capabilities:
 
 *Multi Tenancy*
 
-Multitenancy in Red Hat CloudForms offers several enhancements, with an ability to:
+Multi tenancy in Red Hat CloudForms offers several enhancements, with an ability to:
 
 * Support more than one organization with separate authentication and resource distribution. This includes the ability to have multi-level (nested) tenants.
 * Set quotas in the new tenant.
-* Support Role-based Access Control (RBAC), tagging, and approval sytem for tenants.
+* Support Role-based Access Control (RBAC), tagging, and approval system for tenants.
 
 *Red Hat Access Insights Plug-In*
 
@@ -99,3 +99,6 @@ widgets, dashboard controls and feedback. This enhancement supports:
 * Management of deployed services (My Services).
 * Catalog categories, branding, and authentication.
 
+*Simplified Chinese language support*
+
+Red Hat CloudForms now includes Simplified Chinese as one of the supported languages for the CFME appliance.
