--- a/doc-Release_Notes/ui_locale.adoc
+++ b/doc-Release_Notes/ui_locale.adoc
@@ -1,12 +1,11 @@
 [[changing_the_user_interface_locale]]
 == Changing the User Interface Locale
 
-You can use this procedure to change the user interface locale to specify either English or Japanese.
+You can use this procedure to change the user interface locale to specify either English, Japanese, or Simplified Chinese.
 
 . Navigate to +Configure → My Settings+ from the navigation bar.
 . In the +Visual+ tab, go to +Display Settings+.
 image:7167.png[]
-From the +Locale+ list, select the user interface locale to specifiy either English, or +Ja+ for Japanese. The default is English.
-. You can also change the time zone from the +Time Zone+ list as required. The default is (GMT+00:00)UTC.
+From the +Locale+ list, select the user interface locale to specify either English, +日本語+ for Japanese, or +简体中文+ for Simplified Chinese. The default is English.
+. You can also change the time zone from the +Time Zone+ list as required. The default is (GMT+00:00) UTC.
 . Click +Save+.
-
