Added note to Release Notes - Enhancements section to call out new UI language; Updated Changing the User Interface Locale in Release Notes to include Chinese and added new screenshot; Changed 1.4. Setting Display Settings (General Configuration Guide), step 6

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -94,7 +94,7 @@ Hat CloudForms:
 Users can better manage services and resources, using a user interface with
 widgets, dashboard controls and feedback. This enhancement supports:
 
-* Graphic images and html text description on the services.
+* Graphic images and HTML text description on the services.
 * Presentation of dialogs when a service is ordered.
 * Management of deployed services (My Services).
 * Catalog categories, branding, and authentication.
