Minor edits to UI locale spacing and Azure content

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -56,6 +56,18 @@ Red Hat Access Insights is an automated service that provides
 information that helps users to rapidly identify key issues in
 their Red Hat CloudForms deployment.
 
+*Microsoft Azure Providers*
+
+Red Hat CloudForms now provides a new provider to enable deep Microsoft Azure Integration, providing capabilities such as inventory and provisioning.
+
+The Microsoft Azure Integration will deliver the following capabilities to Red Hat CloudForms:
+
+* Inventory
+* Component Inventory
+* Capacity
+* Relationships
+* Utilization
+
 *Red Hat OpenShift v3 Providers*
 
 The integration of Red Hat OpenShift v3 providers in Red Hat
