reformatted titles of guides throughout for BZ#1282791

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes.adoc
@@ -3,7 +3,7 @@
 
 CloudForms Management Engine can collect processes running on Windows virtual machines.
 To do this, enter domain credentials for the zone where the virtual machine is located.
-For more information, see https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+For more information, see the _CloudForms Management Engine Settings and Operations Guide_.
 The virtual machine must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
