--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
@@ -2,7 +2,7 @@
 
 CloudForms Management Engine can collect processes running on Windows instances.
 To do this, enter domain credentials for the zone where the instance is located.
-For more information, see https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.1/html/Management_Engine_5.3_Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+For more information, see the _CloudForms Management Engine Settings and Operations Guide_.
 The instance must be running and must have an IP address in the VMDB, usually obtained from a SmartState Analysis.
 
 . Navigate to menu:Clouds[Instances].
