--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
@@ -8,6 +8,6 @@ Refresh a repository for its properties and virtual machines.
 . Click [label]#OK#.
 
 Identify a SmartProxy that has access to the repository to refresh it.
-For more information on [label]#Default Repository# SmartProxy parameter, see https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.1/html/Management_Engine_5.3_Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+For more information on [label]#Default Repository# SmartProxy parameter, see the _CloudForms Management Engine Settings and Operations Guide_.
 
 NOTE: If you are using more than one CloudForms Management Engine Appliance, be sure to set the [label]#Default Repository# SmartProxy on all of the appliances.
