--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
@@ -2,7 +2,7 @@
 = Viewing Event Logs for a Virtual Machine or Template
 
 Using an [label]#Analysis Profile#, collect event log information from your virtual machines.
-See "Setting a Default Analysis Profile" in https://access.redhat.com/documentation/en-US/CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+See "Setting a Default Analysis Profile" in the _CloudForms Management Engine Settings and Operations Guide_.
 
 NOTE: This feature is only available for Windows.
 
