--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
@@ -3,7 +3,7 @@
 View capacity and utilization data for instances that are part of a cluster.
 
 NOTE: You must have a server with network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to use this feature.
-For more information, see https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+For more information, see the _CloudForms Management Engine Settings and Operations Guide_.
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion to view capacity data.
