--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -1,7 +1,7 @@
 = Viewing Event Logs for an Instance or Image
 
 Using an [label]#Analysis Profile#, collect event log information from your instances.
-See the [label]#Creating a Default Analysis Profile# section https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Settings_and_Operations_Guide/index.html[CloudForms Management Engine Settings and Operations Guide].
+See the "Creating a Default Analysis Profile" section in the _CloudForms Management Engine Settings and Operations Guide_.
 
 NOTE: This feature is only available for Windows.
 
