--- a/doc-Managing_Infrastructure_and_Inventory/topics/PXE_Servers.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/PXE_Servers.adoc
@@ -2,4 +2,4 @@
 
 PXE servers are used by CloudForms Management Engine to bootstrap virtual machines for the purpose of provisioning.
 They include images for different operating systems that can be customized using customization templates and are used in conjunction with IPMI Servers.
-See https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/3.2/html/Lifecycle_and_Automation_Guide/index.html[CloudForms Management Engine Lifecycle and Automation Guide] for more information. 
+See the _CloudForms Management Engine Lifecycle and Automation Guide_ for more information. 
