edited guilabel markup to be btn for asciidoc in main adoc files in Managing Infrastructure and Inventory - still to go -- the files under 'topics'

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Clusters.adoc
@@ -5,6 +5,6 @@ Analyze a cluster to gather historical data to compare with previous points in t
 . Navigate to menu:Infrastructure[Clusters].
 . Check the clusters to analyze.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)].
-. Click [label]#OK#.
+. Click btn:[OK].
 
 The SmartState Analysis begins and returns the current data.
