--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Clusters.adoc
@@ -11,4 +11,4 @@ Before assigning tags, create them using the instructions in the _CloudForms Man
 image::images/2205.png[]
 
 . Select a customer tag from the first dropdown, and then a value for the tag.
-. Select more tags or click [label]#Save# to save your changes.
+. Select more tags or click btn:[Save] to save your changes.
