Added a missing step in Adding Azure Provider. Added new topic Discovering Azure Providers.

--- a/doc-Managing_Providers/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/Cloud_Providers.adoc
@@ -13,6 +13,10 @@ include::topics/Adding_Azure_Providers.adoc[]
 
 
 :leveloffset: 2
+include::topics/Discovering_Azure_Providers.adoc[]
+
+
+:leveloffset: 2
 include::topics/Adding_Amazon_EC2_Providers.adoc[]
 
 
