--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -18,6 +18,7 @@ After a service principal account has been created in Azure, the following three
 . Click image:images/1847.png[] btn:[(Configuration)], then click image:images/1848.png[] btn:[(Add a New Cloud Provider)].
 . Enter a [label]#Name# for the provider.
 . From the [label]#Type# list select [label]#Azure#.
+. Select a region from the [label]#Region# list.
 . Enter [label]#Tenant ID#.
 . Enter [label]#Zone#.
 . In the Credentials section, enter the Client ID and Client Key; click [label]#Validate#.
