--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
@@ -11,11 +11,11 @@ When using an external method, the approval actually takes place on the external
 
 After a provisioning request is sent, if you have proper authority, you can copy, edit, delete, approve, or deny a request.
 
-After submission, the appliance assigns each provision request a +Request ID+. If an error occurs during the approval or provisioning process, use this ID to locate the request in the appliance logs. The Request ID consists of the region associated with the request followed by the request number. As regions define a range of one trillion database IDs, this number can be several digits long.
+After submission, the appliance assigns each provision request a +Request ID+. If an error occurs during the approval or provisioning process, use this ID to locate the request in the appliance logs. The +Request ID+ consists of the region associated with the request followed by the request number. As regions define a range of one trillion database IDs, this number can be several digits long.
 
 *Request ID Format*
 
-Request 99 in region 123 results in Request ID 123000000000099.
++Request 99+ in +region 123+ results in +Request ID 123000000000099+.
         
 ==== Reloading the Status of Provisioning Requests
 
