--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -308,6 +308,24 @@ The update worker synchronizes the VMDB with the status of available CloudForms 
 Servers with the RHN Mirror role also act as a repository for other Appliances to pull CloudForms Management Engine packages updates.
 ==============
 
+====== Subscription Management for Virtual Environment
+
+Customers may license CloudForms for a limited set of providers. This ability is enabled by providing entitlement certificates which describe the features to be enabled. CloudForms can be shipped as a bundled product with other Red Hat products like OpenStack and OpenShift, providing advanced management capabilities to these products.
+
+For more information on managing subscriptions for an IT infrastructure, see, Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html/Subscription_Concepts_and_Workflows/index.html[Subscription Concepts and Workflows] guide.
+
+Entitlements provides the following enhancements to Red Hat:
+
+* Ability to enable or disable providers based upon a certificate.
+* Active subscription with Red Hat Cloud Data Network for delivery to Red Hat CloudForms.
+* Ability to remain in its own CloudForms channels.
+* Ability to add providers even if no certificate is found.
+* In the presence of a certificate, providers are limited as per SKU, the certificate is supporting.
+* Ability to support the provider to SKU mapping.
+* Providers remain fully functional even after adding or removing SKU associated with certificates.
+ 
+For more information on migrating from older Red Hat Network Classic (hosted) to the updated subscription management, see the Red Hat Subscription Management, - https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html-single/MigratingRHN/index.html[Migrating from RHN Classic] guide.
+
 ====== Editing Customer Information
 
 The Red Hat Updates page enables you to edit customer information.
