--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -1,6 +1,5 @@
 = Authenticating VMware vCenter Hosts
 
-After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality.
 The procedure below describes how to authenticate the VMware vCenter hosts. 
 
 . Navigate to menu:Infrastructure[Providers]. 
@@ -16,3 +15,37 @@ The procedure below describes how to authenticate the VMware vCenter hosts.
 
 .Result:
 For all hosts selected, the authentication status in the bottom right quadrant changes from a question mark into a tick mark indicating a successful validated connection. 
+
+== Using a Non-Administrator Account for Host Credentials
+
+After adding a VMware vCenter infrastructure provider, you must authenticate its hosts to enable full functionality. You may use administrator credentials, or you may create another user assigned to a role created for Red Hat CloudForms Management Engine. See the VMware documentation for instructions on how to create a role. You need to enable the following privileges:
+
+From the Global group, check:
+
+* Cancel task
+* Diagnostics
+* Log Event
+* Set custom attribute
+* Settings
+
+The entire set of privileges for the following groups should be checked:
+
+* Alarms
+* Datastores
+* dvPort Group
+* Host
+* Network
+* Resource
+* Scheduled Task
+* Tasks
+* Virtual Machine
+* vSphere Distributed Switch
+
+Additionally, you must assign the new role to the following objects:
+
+* *Datacenter*: At the Datacenter the CloudForms Management Engine (CFME) (formerly EVM) user/group must have at least the read-only role at the Datacenter level (Not Propagated) to be able to see the datacenter. Without this access, relationships cannot be made. Specifically, the datastores will not show up.
+* *Cluster*: Each Cluster that the CloudForms Management Engine needs access to must have the new role assigned and propagated.
+* *Folders*: Each Folder that CloudForms Management Engine needs access to must have the new role assigned and propagated.
+* *Datastores*: Each Datastore that CloudForms Management Engine needs access to must have the new role assigned and propagated.
+* *Networking*: Each vLAN or Port Group that CloudForms Management Engine needs access to must have the new role assigned and propagated.
+
