--- a/doc-General_Configuration_Guide/My_Settings.adoc
+++ b/doc-General_Configuration_Guide/My_Settings.adoc
@@ -69,7 +69,7 @@ Use the following procedure to set general view options:
 * Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
 * In the +General+ area, click the appropriate button for the way you want to view each type of screen listed.
 image:7114.png[]
-* Click +Grid View+) to view virtual thumbnails or icons.
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
 * Click image:2021.png[](+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
 * Click image:2022.png[](+List View+) or image:2022.png[](+Details Mode+) to view a detailed text listing.
 * Click image:2023.png[](+Expanded View+) for an expanded view.
@@ -77,90 +77,92 @@ image:7114.png[]
 * Click image:2025.png[](+Exists Mode+) to view only whether an attribute exists or not.
 * Click +Save+.
 
-
-==== Setting Default View for Management Engine
-
-Use the following procedure to set default view for management engine.
-
-. Navigate to Configure → My Settings, then click on the Default Views tab.
-* Click image:2020.png[] (Grid View) to view virtual thumbnails or icons.
-* Click image:2021.png[] (Tile View) for a view that combines the virtual thumbnail with some text properties that describe the items.
-* Click image:2022.png[] (List View) to view a detailed text listing.
-. Click Save.
-
-
 ==== Setting Default Views for Infrastructure Components
 
 Use the following procedure to set default views for Infrastructure Components.
 
-. Navigate to Configure → My Settings, then click on the Default Views tab.
-. In the Infrastructure area, click the appropriate button for the way you want to view each item.
+. Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
+. In the +Infrastructure+ area, click the appropriate button for the way you want to view each item.
 image:2032.png[]
-* Click image:2020.png[] (Grid View) to view virtual thumbnails or icons.
-* Click image:2021.png[] (Tile View) for a view that combines the virtual thumbnail with some text properties that describe the items.
-* Click image:2022.png[] (List View) to view a detailed text listing.
-. Click Save.
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
+* Click image:2021.png[] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
+* Click image:2022.png[] (+List View+) to view a detailed text listing.
+. Click +Save+.
 
 
 ==== Setting Default Views for Clouds
 
 Use the following procedure to set default views for clouds.
 
-. Navigate to Configure → My Settings, then click on the Default Views tab.
-. In the Clouds area, click the appropriate button for the way you want to view each item.
-[IMAGE]
-* Click [IMAGE] (Grid View) to view virtual thumbnails or icons.
-* Click [IMAGE] (Tile View) for a view that combines the virtual thumbnail with some text properties that describe the items.
-* Click [IMAGE] (List View) to view a detailed text listing.
-. Click Save.
+. Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
+. In the +Clouds+ area, click the appropriate button for the way you want to view each item.
+image:Clouds.png[]
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
+* Click image:2021.png[] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
+* Click image:2022.png[] (+List View+) to view a detailed text listing.
+. Click +Save+.
 
+==== Setting Default Views for Containers
+
+Use the following procedure to set default views for services.
+
+. Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
+. In the +Containers+ area, click the appropriate button for the way you want to view each item.
+image:Containers.png[]
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
+* Click image:2021.png[] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
+* Click image:2022.png[] (+List View+) to view a detailed text listing.
+. Click +Save+.
 
 ==== Setting Default Views for Services
 
-Use the following proceduret to set default views for services.
+Use the following procedure to set default views for services.
 
-. Navigate to Configure → My Settings, then click on the Default Views tab.
-. In the Services area, click the appropriate button for the way you want to view each item.
+. Navigate to +Configure → My Settings+, then click on the +Default Views+ tab.
+. In the +Services+ area, click the appropriate button for the way you want to view each item.
 image:7115.png[]
-* Click image:2020.png[] (Grid View) to view virtual thumbnails or icons.
-* Click image:2021.png[] (Tile View) for a view that combines the virtual thumbnail with some text properties that describe the items.
-* Click image:2022.png[] (Detail View) to view a detailed text listing.
-. Click Save.
+* Click image:2020.png[] (+Grid View+) to view virtual thumbnails or icons.
+* Click image:2021.png[] (+Tile View+) for a view that combines the virtual thumbnail with some text properties that describe the items.
+* Click image:2022.png[] (+List View+) to view a detailed text listing.
+. Click +Save+.
 
 
 === Default Filters
 
 You can set the default filters displayed for your hosts, virtual machines, and templates. These settings are available to all users.
 
+==== Setting Default Filters for Cloud
 
-==== Setting Default Filters for Hosts
+To set default filters for cloud:
 
-To Set Default Filters for Hosts:
+. Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
+. From the +Cloud+ folder, check the boxes for the default filters that you want available. Items that have changed show in blue and bold text.
+. Click +Save+.
 
-. Navigate to Configure → My Settings, then click on the Default Filters tab.
-. In the Hosts folder, select the default filters that you want available on the Hosts page. Items that have changed show in blue, bold text. Not all filters are listed in the figure below.
-[IMAGE]
-. Click Save.
+==== Setting Default Filters for Containers
 
+To Set Default Filters for containers:
 
-==== Setting Default Filters for Templates
+. Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
+. From the +Containers+ folder, check the boxes for the default filters that you want available. Items that have changed show in blue and bold text.
+. Click +Save+.
 
-To set default filters for templates:
+==== Setting Default Filters for Infrastructure
 
-. Navigate to Configure → My Settings, then click on the Default Filters tab.
-. From the Templates and Images folder, check the boxes for the default filters that you want available. Items that have changed show in blue and bold text.
-. Click Save.
+To Set Default Filters for Infrastucture:
 
-
-==== Setting Default Filters for Virtual Machines
-
-To Set Default Filters for Virtual Machines:
-
-. Navigate to Configure → My Settings, then click on the Default Filters tab.
-. From the VMs and Instances folder, check the boxes for the default filters that you want available. Items that have changed show in blue and bold text.
-. Click Save.
+. Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
+. In the +Infrastructure+ folder, select the default filters that you want available. Items that have changed show in blue, bold text. Not all filters are listed in the figure below.
+. Click +Save+.
 
 
+==== Setting Default Filters for Services
+
+To Set Default Filters for Services:
+
+. Navigate to +Configure → My Settings+, then click on the +Default Filters+ tab.
+. In the +Services+ folder, select the default filters that you want available. Items that have changed show in blue, bold text. Not all filters are listed in the figure below.
+. Click +Save+.
 === Time Profiles
 
 Time profiles limit the hours for which data is displayed when viewing capacity and utilization screens. They are also used for performance and trend reports, and for Optimize pages.
@@ -169,17 +171,15 @@ Time profiles limit the hours for which data is displayed when viewing capacity 
 
 To Create a Time Profile:
 
-. Navigate to Configure → My Settings, then click on the Time Profiles tab.
-. Click image:1847.png[](Configuration), and image:plus_green.png[](Add a new Time Profile).
+. Navigate to +Configure → My Settings+, then click on the +Time Profiles+ tab.
+. Click image:1847.png[](+Configuration+), and image:plus_green.png[](+Add a new Time Profile+).
 image:2039.png[]
-. Type a meaningful name in the Description field.
-. For Scope, select All Users to create a global time profile available to all users. Only the super administration and administration roles can create, edit, and delete a global profile.
-Select Current User if this time profile should only be available to the user creating it.
-. Check the Days and Hours for the time profile.
-. For Timezone, you can select a specific time zone or, you can let the user select a time zone when displaying data.
-. If you select a specific time zone, you also have the option to Roll Up Daily Performance data. This option is only available to users with the administration or super administration role.
-Enabling the Roll Up Daily Performance option reduces the time required to process daily capacity and utilization reports and to display daily capacity and utilization charts.
-. Click Add.
+. Type a meaningful name in the +Description+ field.
+. For +Scope+, select +All Users+ to create a global time profile available to all users. Only the super administration and administration roles can create, edit, and delete a global profile. Select +Current User+ if this time profile should only be available to the user creating it.
+. Check the +Days and Hours+ for the time profile.
+. For +Timezone+, you can select a specific time zone or, you can let the user select a time zone when displaying data.
+. If you select a specific time zone, you also have the option to +Roll Up Daily Performance+ data. This option is only available to users with the administration or super administration role. Enabling the Roll Up Daily Performance option reduces the time required to process daily capacity and utilization reports and to display daily capacity and utilization charts.
+. Click +Add+.
 
 
 [NOTE]
@@ -197,31 +197,31 @@ For non-performance reports, the user's time zone is used when displaying dates 
 
 To Edit a Time Profile:
 
-. Navigate to Configure → My Settings, then click on the Time Profiles tab.
+. Navigate to +Configure → My Settings+, then click on the Time Profiles tab.
 . Check the time profile you want to edit.
-. Click image:1847.png[] (Configuration), and image:1851.png[] (Edit Selected Time Profile).
+. Click image:1847.png[] (+Configuration+), and image:1851.png[] (+Edit Selected Time Profile+).
 . Make the required changes.
-. Click Save.
+. Click +Save+.
 
 
 ==== Copying a Time Profile
 
 To Copy a Time Profile:
 
-. Navigate to Configure → My Settings, then click on the Time Profiles tab.
+. Navigate to +Configure → My Settings+, then click on the Time Profiles tab.
 . Check the time profile you want to copy.
-. Click image:1847.png[] (Configuration), and image:1859.png[] (Copy Selected Time Profile).
+. Click image:1847.png[] (+Configuration+), and image:1859.png[] (+Copy Selected Time Profile+).
 . Make the required changes.
-. Click Save.
+. Click +Save+.
 
 
 ==== Deleting a Time Profile
 
 To Delete a Time Profile:
 
-. Navigate to Configure → My Settings, then click on the Time Profiles tab.
+. Navigate to +Configure → My Settings+, then click on the +Time Profiles+ tab.
 . Check the time profile you want to edit.
-. Click image:1847.png[] (Configuration), and image:gui_delete.png[] (Delete Selected Time Profiles).
+. Click image:1847.png[] (+Configuration+), and image:gui_delete.png[] (+Delete Selected Time Profiles+).
 . Make the required changes.
-. Click Save.
+. Click +Save+.
 
