--- a/doc-Monitoring_Alerts_and_Reporting/RSS.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/RSS.adoc
@@ -4,6 +4,9 @@
 Use RSS to view RSS feeds based on administrative roles.
 You can subscribe to the RSS feeds and have them delivered to an RSS reader. 
 
+.Procedure: To Access RSS
+. Navigate to menu:Cloud Intelligence[RSS].  
+
 
 image::images/2308.png[]
 
